package services

import (
	"context"
	"fmt"
	"time"

	"github.com/google/uuid"
	"github.com/shivadeepak99/quantum-image-shield/backend/internal/models"
)

// ðŸ’œ QuantumService handles quantum encryption/decryption operations
type QuantumService struct {
	grpcClient interface{} // TODO: Replace with actual gRPC client
	// db         *gorm.DB
	// redis      *redis.Client
}

// NewQuantumService creates a new quantum service instance
func NewQuantumService() *QuantumService {
	return &QuantumService{
		// TODO: Initialize gRPC client, DB, Redis
	}
}

// EncryptImage encrypts an image using quantum randomness
func (s *QuantumService) EncryptImage(ctx context.Context, imageData []byte, purity string) (*models.Job, error) {
	// Create job record
	job := &models.Job{
		ID:          uuid.New(),
		Type:        models.JobTypeEncrypt,
		Status:      models.JobStatusQueued,
		PurityLevel: purity,
		Progress:    0,
		CreatedAt:   time.Now(),
		UpdatedAt:   time.Now(),
	}

	// TODO: 
	// 1. Save job to database
	// 2. Push job to Redis queue
	// 3. Background worker picks up and calls Python gRPC service
	// 4. Update job status via Redis pubsub
	// 5. Store encrypted image and keys

	return job, nil
}

// DecryptImage decrypts an encrypted image
func (s *QuantumService) DecryptImage(ctx context.Context, encryptedData []byte, keyData []byte) (*models.Job, error) {
	job := &models.Job{
		ID:        uuid.New(),
		Type:      models.JobTypeDecrypt,
		Status:    models.JobStatusQueued,
		Progress:  0,
		CreatedAt: time.Now(),
		UpdatedAt: time.Now(),
	}

	// TODO: Similar flow to encryption
	
	return job, nil
}

// GetJobStatus retrieves job status from database/cache
func (s *QuantumService) GetJobStatus(ctx context.Context, jobID uuid.UUID) (*models.Job, error) {
	// TODO: Query from database
	return nil, fmt.Errorf("not implemented")
}

// UpdateJobProgress updates job progress (called by worker)
func (s *QuantumService) UpdateJobProgress(ctx context.Context, jobID uuid.UUID, progress int, status models.JobStatus) error {
	// TODO: Update database and publish to Redis for WebSocket clients
	return fmt.Errorf("not implemented")
}
